# technical_challenge

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  typesense-data.rar
app/: main.py
app/api/endpoints/: auth_routes.py  release_routes.py  search_routes.py  track_routes.py
app/core/: config.py  supabase_client.py  typesense_client.py
app/db/: connection.py
app/db/models/: Base.py  __init__.py  artist.py  country.py  release.py  release_country.py  release_type.py  track.py  track_artist.py
app/schemas/: auth.py  pagination.py  release.py  search.py  track.py  typesense_schema.py
app/utils/: auth_functions.py  general_functions.py  search_functions.py  track_functions.py
